editor overflow problem solved with z-index, editor onSelectText still gets cut off

--- a/src/client/components/HomePage/EditorColumn/editor.css
+++ b/src/client/components/HomePage/EditorColumn/editor.css
@@ -3,6 +3,8 @@
   font-family: "AvenirNext-Regular";
   overflow-y: auto;
   height: 90%;
+  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .editor {
@@ -14,6 +16,7 @@
   border-left: 1px solid #979797;
   flex: 2;
   padding-left: 24px;
+  z-index: 10;
 }
 
 .editor-action-bar {
